# darknet

./: .gitignore  CMakeLists.txt  Makefile  README.md  package.xml
cfg/: voc.data
scripts/: voc_hh_label.py
src/: ROS_interface.h  ROS_objd.cpp  activations.h  art.c  classifier.c  darknet.c  data.c  demo.c  demo.h  detector.c  image.c  rnn.c  rnn_vid.c  voxel.c  yolo_kernels.cu
